<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MY NEXT PLACE OF BIRTH</string>
    <string name="roll">Roll</string>
    <string name="flag_image_desc">Flag Image</string>
    <string name="nation_name">Nation Name</string>
    <string name="input_name">홍길동</string>
    <string name="num_hint">19991231</string>
    <string name="generate_button">다음생에 태어날곳 알아보기</string>
    <string name="username_text">홍길동님은 여기에서 태어납니다</string>
    <string name="name_title">이번생의 이름을 입력해주세요</string>
    <string name="birth_title">이번생의 생년월일 8자리를 입력해주세요</string>
    <string name="app_title1">당신은 누구입니까?</string>
    <string name="app_title2">MY NEXT PLACE OF BIRTH</string>
    <string name="app_title3">ENTER YOUR NAME AND BIRTHDAY</string>
    <string name="result_desc">설명이 들어갑니다</string>
    <string name="test_button">test</string>
    <string name="test_result">결과</string>
    <string name="splash_title">TEKI KIM</string>
    <string name="logo_desc">logo</string>
    <string name="app_version">ver 1.0.0</string>
    <string name="Andorra">안도라</string>
    <string name="United_Arab_Emirates">아랍에미리트</string>
    <string name="Afghanistan">아프가니스탄</string>
    <string name="Antigua_and_Barbuda">앤티가 바부다</string>
    <string name="Anguilla">앵귈라</string>
    <string name="Albania">알바니아</string>
    <string name="Armenia">아르메니아</string>
    <string name="Angola">앙골라</string>
    <string name="Antarctica">남극대륙</string>
    <string name="Argentina">아르헨티나</string>
    <string name="American_Samoa">아메리칸 사모아</string>
    <string name="Austria">오스트리아</string>
    <string name="Australia">오스트레일리아</string>
    <string name="Aruba">아루바</string>
    <string name="Åland_Islands">올란드 제도</string>
    <string name="Azerbaijan">아제르바이잔</string>
    <string name="Bosnia_and_Herzegovina">보스니아 헤르체고비나</string>
    <string name="Barbados">바베이도스</string>
    <string name="Bangladesh">방글라데시</string>
    <string name="Belgium">벨기에</string>
    <string name="Burkina_Faso">부르키나파소</string>
    <string name="Bulgaria">불가리아</string>
    <string name="Bahrain">바레인</string>
    <string name="Burundi">부룬디</string>
    <string name="Benin">베냉</string>
    <string name="Saint_Barthélemy">생바르텔레미</string>
    <string name="Bermuda">버뮤다</string>
    <string name="Brunei">브루나이</string>
    <string name="Bolivia">볼리비아</string>
    <string name="Caribbean_Netherlands">카리브 네덜란드</string>
    <string name="Brazil">브라질</string>
    <string name="Bahamas">바하마</string>
    <string name="Bhutan">부탄</string>
    <string name="Bouvet_Island">부베 섬</string>
    <string name="Botswana">보츠와나</string>
    <string name="Belarus">벨라루스</string>
    <string name="Belize">벨리즈</string>
    <string name="Canada">캐나다</string>
    <string name="Cocos_Keeling_Islands">코코스 제도</string>
    <string name="DR_Congo">콩고 민주 공화국</string>
    <string name="Central_African_Republic">중앙아프리카 공화국</string>
    <string name="Republic_of_the_Congo">콩고 공화국</string>
    <string name="Switzerland">스위스</string>
    <string name="Ivory_Coast">코트디부아르</string>
    <string name="Cook_Islands">쿡 제도</string>
    <string name="Chile">칠레</string>
    <string name="Cameroon">카메룬</string>
    <string name="China">중국</string>
    <string name="Colombia">콜롬비아</string>
    <string name="Costa_Rica">코스타리카</string>
    <string name="Cuba">쿠바</string>
    <string name="Cape_Verde">카보베르데</string>
    <string name="Curaçao">퀴라소</string>
    <string name="Christmas_Island">크리스마스 섬</string>
    <string name="Cyprus">키프로스</string>
    <string name="Czechia">체코</string>
    <string name="Germany">독일</string>
    <string name="Djibouti">지부티</string>
    <string name="Denmark">덴마크</string>
    <string name="Dominica">도미니카 연방</string>
    <string name="Dominican_Republic">도미니카 공화국</string>
    <string name="Algeria">알제리</string>
    <string name="Ecuador">에콰도르</string>
    <string name="Estonia">에스토니아</string>
    <string name="Egypt">이집트</string>
    <string name="Western_Sahara">서사하라</string>
    <string name="Eritrea">에리트레아</string>
    <string name="Spain">스페인</string>
    <string name="Ethiopia">에티오피아</string>
    <string name="Finland">핀란드</string>
    <string name="Fiji">피지</string>
    <string name="Falkland_Islands">포클랜드 제도</string>
    <string name="Micronesia">미크로네시아</string>
    <string name="Faroe_Islands">페로 제도</string>
    <string name="France">프랑스</string>
    <string name="Gabon">가봉</string>
    <string name="United_Kingdom">영국</string>
    <string name="England">잉글랜드</string>
    <string name="Northern_Ireland">북아일랜드</string>
    <string name="Scotland">스코틀랜드</string>
    <string name="Wales">웨일즈</string>
    <string name="Grenada">그레나다</string>
    <string name="Georgia">조지아</string>
    <string name="French_Guiana">프랑스령 기아나</string>
    <string name="Guernsey">건지</string>
    <string name="Ghana">가나</string>
    <string name="Gibraltar">지브롤터</string>
    <string name="Greenland">그린란드</string>
    <string name="Gambia">감비아</string>
    <string name="Guinea">기니</string>
    <string name="Guadeloupe">과들루프</string>
    <string name="Equatorial_Guinea">적도 기니</string>
    <string name="Greece">그리스</string>
    <string name="South_Georgia">사우스조지아</string>
    <string name="Guatemala">과테말라</string>
    <string name="Guam">괌</string>
    <string name="Guinea_Bissau">기니비사우</string>
    <string name="Guyana">가이아나</string>
    <string name="Hong_Kong">홍콩</string>
    <string name="Heard_Island_and_McDonald_Islands">허드 맥도널드 제도</string>
    <string name="Honduras">온두라스</string>
    <string name="Croatia">크로아티아</string>
    <string name="Haiti">아이티</string>
    <string name="Hungary">헝가리</string>
    <string name="Indonesia">인도네시아</string>
    <string name="Ireland">아일랜드</string>
    <string name="Israel">이스라엘</string>
    <string name="Isle_of_Man">맨 섬</string>
    <string name="India">인도</string>
    <string name="British_Indian_Ocean_Territory">영국령 인도양 지역</string>
    <string name="Iraq">이라크</string>
    <string name="Iran">이란</string>
    <string name="Iceland">아이슬란드</string>
    <string name="Italy">이탈리아</string>
    <string name="Jersey">저지 섬</string>
    <string name="Jamaica">자메이카</string>
    <string name="Jordan">요르단</string>
    <string name="Japan">일본</string>
    <string name="Kenya">케냐</string>
    <string name="Kyrgyzstan">키르기스스탄</string>
    <string name="Cambodia">캄보디아</string>
    <string name="Kiribati">키리바시</string>
    <string name="Comoros">코모로</string>
    <string name="Saint_Kitts_and_Nevis">세인트키츠 네비스</string>
    <string name="North_Korea">북한</string>
    <string name="South_Korea">대한민국</string>
    <string name="Kuwait">쿠웨이트</string>
    <string name="Cayman_Islands">케이맨 제도</string>
    <string name="Kazakhstan">카자흐스탄</string>
    <string name="Laos">라오스</string>
    <string name="Lebanon">레바논</string>
    <string name="Saint_Lucia">세인트루시아</string>
    <string name="Liechtenstein">리히텐슈타인</string>
    <string name="Sri_Lanka">스리랑카</string>
    <string name="Liberia">라이베리아</string>
    <string name="Lesotho">레소토</string>
    <string name="Lithuania">리투아니아</string>
    <string name="Luxembourg">룩셈부르크</string>
    <string name="Latvia">라트비아</string>
    <string name="Libya">리비아</string>
    <string name="Morocco">모로코</string>
    <string name="Monaco">모나코</string>
    <string name="Moldova">몰도바</string>
    <string name="Montenegro">몬테네그로</string>
    <string name="Saint_Martin">생마르탱</string>
    <string name="Madagascar">마다가스카르</string>
    <string name="Marshall_Islands">마셜 제도</string>
    <string name="North_Macedonia">북마케도니아</string>
    <string name="Mali">말리</string>
    <string name="Myanmar">미얀마</string>
    <string name="Mongolia">몽골</string>
    <string name="Macau">마카오</string>
    <string name="Northern_Mariana_Islands">북마리아나 제도</string>
    <string name="Martinique">마르티니크</string>
    <string name="Mauritania">모리타니</string>
    <string name="Montserrat">몬트세랫</string>
    <string name="Malta">몰타</string>
    <string name="Mauritius">모리셔스</string>
    <string name="Maldives">몰디브</string>
    <string name="Malawi">말라위</string>
    <string name="Mexico">멕시코</string>
    <string name="Malaysia">말레이시아</string>
    <string name="Mozambique">모잠비크</string>
    <string name="Namibia">나미비아</string>
    <string name="New_Caledonia">뉴칼레도니아</string>
    <string name="Niger">니제르</string>
    <string name="Norfolk_Island">노퍽섬</string>
    <string name="Nigeria">나이지리아</string>
    <string name="Nicaragua">니카라과</string>
    <string name="Netherlands">네덜란드</string>
    <string name="Norway">노르웨이</string>
    <string name="Nepal">네팔</string>
    <string name="Nauru">나우루</string>
    <string name="Niue">니우에</string>
    <string name="New_Zealand">뉴질랜드</string>
    <string name="Oman">오만</string>
    <string name="Panama">파나마</string>
    <string name="Peru">페루</string>
    <string name="French_Polynesia">프랑스령 폴리네시아</string>
    <string name="Papua_New_Guinea">파푸아뉴기니</string>
    <string name="Philippines">필리핀</string>
    <string name="Pakistan">파키스탄</string>
    <string name="Poland">폴란드</string>
    <string name="Saint_Pierre_and_Miquelon">생피에르 미클롱</string>
    <string name="Pitcairn_Islands">핏케언 제도</string>
    <string name="Puerto_Rico">푸에르토리코</string>
    <string name="Palestine">팔레스타인</string>
    <string name="Portugal">포르투갈</string>
    <string name="Palau">팔라우</string>
    <string name="Paraguay">파라과이</string>
    <string name="Qatar">카타르</string>
    <string name="Réunion">레위니옹</string>
    <string name="Romania">루마니아</string>
    <string name="Serbia">세르비아</string>
    <string name="Russia">러시아</string>
    <string name="Rwanda">르완다</string>
    <string name="Saudi_Arabia">사우디아라비아</string>
    <string name="Solomon_Islands">솔로몬 제도</string>
    <string name="Seychelles">세이셸</string>
    <string name="Sudan">수단</string>
    <string name="Sweden">스웨덴</string>
    <string name="Singapore">싱가포르</string>
    <string name="Saint_Helena_Ascension_and_Tristan_da_Cunha">세인트헬레나 어센션 트리스탄다쿠냐</string>
    <string name="Slovenia">슬로베이나</string>
    <string name="Svalbard_and_Jan_Mayen">스발바르 얀마옌 제도</string>
    <string name="Slovakia">슬로바키아</string>
    <string name="Sierra_Leone">시에라리온</string>
    <string name="San_Marino">산마리노</string>
    <string name="Senegal">세네갈</string>
    <string name="Somalia">소말리아</string>
    <string name="Suriname">수리남</string>
    <string name="South_Sudan">남수단</string>
    <string name="São_Tomé_and_Príncipe">상투메 프린시페</string>
    <string name="El_Salvador">엘살바도르</string>
    <string name="Sint_Maarten">신트마르턴</string>
    <string name="Syria">시리아</string>
    <string name="Eswatini_Swaziland">에스와티니</string>
    <string name="Turks_and_Caicos_Islands">터크스 케이커스 제도</string>
    <string name="Chad">차드</string>
    <string name="French_Southern_and_Antarctic_Lands">프랑스령 남방 및 남극</string>
    <string name="Togo">토고</string>
    <string name="Thailand">태국</string>
    <string name="Tajikistan">타지키스탄</string>
    <string name="Tokelau">토켈라우</string>
    <string name="Timor_Leste">동티모르</string>
    <string name="Turkmenistan">투르크메니스탄</string>
    <string name="Tunisia">튀니지</string>
    <string name="Tonga">통가</string>
    <string name="Turkey">터키</string>
    <string name="Trinidad_and_Tobago">트리니다드 토바고</string>
    <string name="Tuvalu">투발루</string>
    <string name="Taiwan">대만</string>
    <string name="Tanzania">탄자니아</string>
    <string name="Ukraine">우크라이나</string>
    <string name="Uganda">우간다</string>
    <string name="United_States_Minor_Outlying_Islands">미국령 군소 제도</string>
    <string name="United_States">미국</string>
    <string name="Uruguay">우루과이</string>
    <string name="Uzbekistan">우즈베키스탄</string>
    <string name="Albania_desc">알바니아, 공식적으로는 알바니아 공화국은 동남유럽 지역에 위치한 국가입니다. 총면적 28,748km²로 2016년 기준 300만 명 가까이의 인구를 보유하고 있습니다. 티라나는 알바니아에서 가장 큰 도시이자 수도이며, 두러스와 블로러 등의 대도시들이 알바니아에 위치하고 있습니다. 알바니아는 발칸 반도에 위치하여, 북서쪽으로는 몬테네그로, 북동쪽으로는 코소보, 동쪽으로는 마케도니아 공화국, 남쪽과 남동쪽으로는 그리스와 국경을 맞대고 있습니다. 알바니아는 북쪽으로는 지중해, 서쪽으로는 아드리아 해, 그리고 남서쪽으로는 이오니아 해와 해안선을 맞대고 있습니다. 알바니아는 이탈리아와 오트란토 해협을 두고 72km도 되지 않는 가까운 거리에 위치해 있습니다.</string>
</resources>