<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Input">

    <TextView
        android:id="@+id/app_title_kr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_title1"
        android:textColor="#ff8800"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_title2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:contentDescription="@string/input_name"
        android:ems="10"
        android:hint="@string/input_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/gene_button"
        app:layout_constraintBottom_toTopOf="@+id/birth_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor, ContentDescription" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/name_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_name_input"
        app:layout_constraintStart_toStartOf="@+id/user_name_input" />

    <TextView
        android:id="@+id/birth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/birth_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_birth_input"
        app:layout_constraintStart_toStartOf="@+id/user_birth_input" />

    <EditText
        android:id="@+id/user_birth_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="32dp"
        android:ems="10"
        android:hint="@string/num_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/gene_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/radius"
        android:text="@string/generate_button"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_birth_input"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/app_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/app_title3"
        android:textColor="#ff8800"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_name_input"
        app:layout_constraintStart_toStartOf="@+id/app_title_kr"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>