<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/flag_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/flag_image_desc"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kr"
        tools:src="@drawable/kr" />

    <TextView
        android:id="@+id/nation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/nation_name"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/flag_image"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/result_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:padding="@dimen/default_padding"
        android:text="@string/username_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/nation_name"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/result_desc_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/result_name_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_desc_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:padding="@dimen/default_padding"
                android:text="@string/Albania_desc"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>